<resources>
    <string name="app_name">Assessment</string>
    <string name="page_title">Farmers\' Panel</string>
    <string name="dashboard">Dashboard</string>
    <string name="search_button">search_button</string>
    <string name="type_to_search">Type to search</string>
    <string name="farmer_s_panel">Farmer\'s Panel</string>
    <string name="placeholder_text">Lorem ipsum dolor sit amet consectetur. Est amet lobortis etiam justo vel.</string>
    <string name="personal_details">Personal details</string>
    <string name="placeholder_name">Kwame Anim</string>
    <string name="placeholder_occupation">Farmer</string>
    <string name="placeholder_male">Male</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="upload_photo">Upload photo</string>
    <string name="label_gender">Gender</string>
    <string name="palceholder_female">Female</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_place">Birth place</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="house_number">House Number</string>
    <string name="community">Community</string>
    <string name="occupation">Occupation</string>
    <string name="district">District</string>
    <string name="region">Region</string>
    <string name="marital_status">Marital Status</string>
    <string name="bio">Bio</string>
    <string name="write_a_short_introduction">Write a short introduction</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="profile_image">Profile Image</string>
    <string name="take_photo">Take photo</string>
    <string name="placeholder_location">Accra</string>
    <string name="placeholder_business_type">Pig Farm</string>
    <string name="column_separator">, </string>
    <string name="birth_place_label">Birth place :</string>
    <string name="placeholder_birthplace_example">Tema Metroplian</string>
    <string name="label_date_of_birth">Date of birth :</string>
    <string name="placeholder_text_date_of_birth">23 / 1 / 1976</string>
    <string name="label_house_number">House Number :</string>
    <string name="placeholder_text_house_number">B246373</string>
    <string name="label_community">Community :</string>
    <string name="placeholder_text_community">Tema community 20</string>
    <string name="label_district">District :</string>
    <string name="placeholder_text_district">Seto District</string>
    <string name="label_region">Region :</string>
    <string name="placeholder_text_region">Greater Accra Region</string>
    <string name="label_marital_status">Marital Status :</string>
    <string name="label_single">Single</string>
    <string name="label_bio">Bio :</string>
    <string name="placeholder_text_bio">I am a passionate farmer who has been working on my family farm for over 20 years. I specialize in growing a variety of crops, including corn, soybeans, and wheat. In addition to traditional farming methods, I am also interested in sustainable agriculture practices, such as using cover crops and crop rotation to improve soil health. I am a proud member of my local farm bureau and I am known in the community for my commitment to producing high-quality, locally-sourced food.</string>
    <string name="btl_label_edit_profile">Edit Profile</string>
    <string name="btn_label_delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="under_development">Under development</string>
    <string name="feature_unavailable">Feature unavailable</string>
    <string name="bookmark">Bookmark</string>
</resources>